--- a/src/components/HomePage/Contact-Us.css
+++ b/src/components/HomePage/Contact-Us.css
@@ -10,7 +10,7 @@
     line-height: 1.25;
     letter-spacing: normal;
     text-align: left;
-    color: #ffff;
+    color: #000;
     display: flex;
     flex-wrap: wrap;
 }
@@ -21,7 +21,7 @@
     font-weight: 500;
     /* line-height: 1.29px; */
     text-align: left;
-    color: #ffff;
+    color: #000;
     margin: -520px 100px;
     flex-wrap: wrap;
 }
@@ -38,7 +38,7 @@
     font-style: normal;
     letter-spacing: normal;
     text-align: left;
-    color: #ffff;
+    color: #000;
     flex-wrap: wrap;
 }
 
