--- a/src/components/HomePage/our-story.css
+++ b/src/components/HomePage/our-story.css
@@ -9,8 +9,8 @@ body {
 }
 .profile {
   width: 450px;
-  margin-top: -44%;
-  margin-left: 12%;
+  margin-top: -40%;
+  margin-left: 10%;
   height: 500px;
   flex-wrap: wrap;
 }
